--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,7 +8,7 @@
   "license": "ISC",
   "author": "ASHISH KUMAR",
   "type": "module",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node server.js"
